# Hunyuan3D-2

./: .gitignore  README.md  README_ja_jp.md  README_zh_cn.md  api_server.py  blender_addon.py  gradio_app.py  minimal_demo.py  pyproject.toml  requirements.txt  setup.py
assets/: modelviewer-template.html  modelviewer-textured-template.html
examples/: shape_gen_multiview.py  textured_shape_gen_multiview.py
examples/paris/: paris_shape_gen.py
hy3dgen/shapegen/: __init__.py  pipelines.py  postprocessors.py  preprocessors.py  schedulers.py  utils.py
hy3dgen/shapegen/models/: conditioner.py
hy3dgen/shapegen/models/autoencoders/: __init__.py  attention_blocks.py  attention_processors.py  model.py  surface_extractors.py  volume_decoders.py
hy3dgen/shapegen/models/denoisers/: __init__.py  hunyuan3ddit.py
hy3dgen/texgen/: pipelines.py
hy3dgen/texgen/custom_rasterizer/custom_rasterizer/: io_glb.py
hy3dgen/texgen/custom_rasterizer/lib/custom_rasterizer_kernel/: grid_neighbor.cpp  rasterizer.cpp  rasterizer_gpu.cu
hy3dgen/texgen/differentiable_renderer/: mesh_processor.cpp  mesh_render.py
hy3dgen/texgen/hunyuanpaint/: pipeline.py
hy3dgen/texgen/hunyuanpaint/unet/: modules.py
hy3dgen/texgen/utils/: dehighlight_utils.py  multiview_utils.py  uv_warp_utils.py
