[project]
name = "hunyuan3d-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "einops>=0.8.1",
    "fastapi>=0.115.11",
    "gradio>=5.22.0",
    "llvmlite>=0.39.0",
    "ninja>=1.11.1.3",
    "numba>=0.56.0",
    "numpy>=2.1.3",
    "omegaconf>=2.3.0",
    "onnxruntime>=1.21.0",
    "opencv-python>=4.11.0.86",
    "pybind11>=2.13.6",
    "pygltflib>=1.16.3",
    "pymeshlab>=2023.12.post3",
    "rembg>=2.0.65",
    "setuptools>=76.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
    "transformers>=4.49.0",
    "trimesh>=4.6.5",
    "uvicorn>=0.34.0",
    "xatlas>=0.0.9",
]

[dependency-groups]
dev = [
    "hunyuan3d-2",
]

[tool.uv.sources]
hunyuan3d-2 = { workspace = true }
